Fix button alignment

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -20,6 +20,5 @@
 }
 
 .button-center {
-    left: 300px;
     position: relative;
 }
